# lab_5

./: CMakeLists.txt  Отчёт ЛР3 Кочкин В.Р. Фиб-3301.docx  Отчёт ЛР5 Кочкин В.Р. Фиб-3301.docx
task_0/: main.cpp
task_1/: main.cpp
task_2/: main.cpp
task_3/: main.cpp
task_4/: main.cpp
task_5/: main.cpp
task_6/: main.cpp
task_7/: main.cpp
task_8/: main.cpp
