cmake_minimum_required(VERSION 3.21)
project(lab_5)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_BUILD_TYPE RELEASE)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")

add_executable(task_0 task_0/main.cpp)
add_executable(task_1 task_1/main.cpp)
add_executable(task_2 task_2/main.cpp)
add_executable(task_3 task_3/main.cpp)
add_executable(task_4 task_4/main.cpp)
add_executable(task_5 task_5/main.cpp)
add_executable(task_6 task_6/main.cpp)
add_executable(task_7 task_7/main.cpp)
add_executable(task_8 task_8/main.cpp)
